include/fitpack_surface_c.h

/**
 * @brief surface_eval_gridded
 * @param x 
 * @param y 
 * @param ierr 
 * @note result: caller-allocated buffer of max_size elements; n_result receives the actual count (= product of (SIZE(y), SIZE(x)))
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_surface_eval_gridded(fitpack_surface_c* self, int32_t n, const double* x, const double* y, int32_t* ierr, double* result, int32_t* n_result, int32_t max_size);
/**
 * @brief surface_derivatives_many
 * @param x 
 * @param y 
 * @param dx 
 * @param dy 
 * @param ierr 
 * @note result: caller-allocated buffer of max_size elements; n_result receives the actual count (= product of (SIZE(x)))
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_surface_derivatives_many(fitpack_surface_c* self, int32_t n, const double* x, const double* y, int32_t dx, int32_t dy, int32_t* ierr, double* result, int32_t* n_result, int32_t max_size);
/**
 * @brief surface_derivatives_gridded
 * @param x 
 * @param y 
 * @param dx 
 * @param dy 
 * @param ierr 
 * @note result: caller-allocated buffer of max_size elements; n_result receives the actual count (= product of (SIZE(y), SIZE(x)))
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_surface_derivatives_gridded(fitpack_surface_c* self, int32_t n, const double* x, const double* y, int32_t dx, int32_t dy, int32_t* ierr, double* result, int32_t* n_result, int32_t max_size);
/**
 * @brief integral
 * @param lower 
 * @param upper 
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_surface_c_integral(const fitpack_surface_c* self, int32_t n, const double* lower, const double* upper);
/**
 * @brief comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_comm_pack(const fitpack_surface_c* self, int32_t n, double* buffer);
/**
 * @brief comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_comm_expand(fitpack_surface_c* self, int32_t n, const double* buffer);
/**
 * @brief core_comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_core_comm_pack(const fitpack_surface_c* self, int32_t n, double* buffer);
/**
 * @brief core_comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_core_comm_expand(fitpack_surface_c* self, int32_t n, const double* buffer);
/* ===========================================================================================
 * Component Array Accessors (raw pointer + extents)
 * =========================================================================================== */

/**
 * @brief Borrow the storage of allocatable array component 'x'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 1 extent(s); all zero when the
 *                component is unallocated.
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_getcomp_x(const fitpack_surface_c* self, double** ptr, int64_t extents[1]);
/**
 * @brief Borrow the storage of allocatable array component 'y'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 1 extent(s); all zero when the
 *                component is unallocated.
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_getcomp_y(const fitpack_surface_c* self, double** ptr, int64_t extents[1]);
/**
 * @brief Borrow the storage of allocatable array component 'z'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 1 extent(s); all zero when the
 *                component is unallocated.
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_getcomp_z(const fitpack_surface_c* self, double** ptr, int64_t extents[1]);
/**
 * @brief Borrow the storage of allocatable array component 'w'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 1 extent(s); all zero when the
 *                component is unallocated.
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_getcomp_w(const fitpack_surface_c* self, double** ptr, int64_t extents[1]);
/**
 * @brief Borrow the storage of allocatable array component 'wrk2'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 1 extent(s); all zero when the
 *                component is unallocated.
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_getcomp_wrk2(const fitpack_surface_c* self, double** ptr, int64_t extents[1]);