src/capi/fitpack_surfaces_c.f90


    !> surface_eval_gridded
    subroutine fitpack_surface_c_surface_eval_gridded(this, n, x, y, ierr, result, n_result, max_size) bind(C,  &
        & name='fitpack_surface_c_surface_eval_gridded')
        type(fitpack_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: x(n)
        real(c_double), intent(in) :: y(n)
        integer(c_int32_t), intent(out), optional :: ierr
        real(c_double), intent(inout) :: result(*)
        integer(c_int32_t), intent(out) :: n_result
        integer(c_int32_t), intent(in), value :: max_size
        real(c_double), allocatable :: fresult(:,:)
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fresult = fthis%eval_ongrid(x=x, y=y, ierr=ierr)
            n_result = size(fresult)
            result(1:min(n_result, max_size)) = reshape(fresult, [min(n_result, max_size)])
        end if
    end subroutine fitpack_surface_c_surface_eval_gridded

    !> surface_derivatives_many
    subroutine fitpack_surface_c_surface_derivatives_many(this, n, x, y, dx, dy, ierr, result, n_result, max_size) bind(C,  &
        & name='fitpack_surface_c_surface_derivatives_many')
        type(fitpack_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n, dx, dy
        real(c_double), intent(in) :: x(n)
        real(c_double), intent(in) :: y(n)
        integer(c_int32_t), intent(out), optional :: ierr
        real(c_double), intent(inout) :: result(*)
        integer(c_int32_t), intent(out) :: n_result
        integer(c_int32_t), intent(in), value :: max_size
        real(c_double), allocatable :: fresult(:)
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fresult = fthis%dfdx(x=x, y=y, dx=dx, dy=dy, ierr=ierr)
            n_result = size(fresult)
            result(1:min(n_result, max_size)) = fresult(1:min(n_result, max_size))
        end if
    end subroutine fitpack_surface_c_surface_derivatives_many

    !> surface_derivatives_gridded
    subroutine fitpack_surface_c_surface_derivatives_gridded(this, n, x, y, dx, dy, ierr, result, n_result, max_size) bind(C,  &
        & name='fitpack_surface_c_surface_derivatives_gridded')
        type(fitpack_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n, dx, dy
        real(c_double), intent(in) :: x(n)
        real(c_double), intent(in) :: y(n)
        integer(c_int32_t), intent(out), optional :: ierr
        real(c_double), intent(inout) :: result(*)
        integer(c_int32_t), intent(out) :: n_result
        integer(c_int32_t), intent(in), value :: max_size
        real(c_double), allocatable :: fresult(:,:)
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fresult = fthis%dfdx_ongrid(x=x, y=y, dx=dx, dy=dy, ierr=ierr)
            n_result = size(fresult)
            result(1:min(n_result, max_size)) = reshape(fresult, [min(n_result, max_size)])
        end if
    end subroutine fitpack_surface_c_surface_derivatives_gridded

    !> integral
    real(c_double) function fitpack_surface_c_integral(this, n, lower, upper) bind(C, name='fitpack_surface_c_integral')
        type(fitpack_surface_c), intent(in) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: lower(n)
        real(c_double), intent(in) :: upper(n)
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_integral = fthis%integral(lower, upper)
        else
            fitpack_surface_c_integral = 0.0_c_double
        end if
    end function fitpack_surface_c_integral

    !> comm_pack
    subroutine fitpack_surface_c_comm_pack(this, n, buffer) bind(C, name='fitpack_surface_c_comm_pack')
        type(fitpack_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_pack(buffer)
        end if
    end subroutine fitpack_surface_c_comm_pack

    !> comm_expand
    subroutine fitpack_surface_c_comm_expand(this, n, buffer) bind(C, name='fitpack_surface_c_comm_expand')
        type(fitpack_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_expand(buffer)
        end if
    end subroutine fitpack_surface_c_comm_expand

    !> core_comm_pack
    subroutine fitpack_surface_c_core_comm_pack(this, n, buffer) bind(C, name='fitpack_surface_c_core_comm_pack')
        type(fitpack_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_pack(buffer)
        end if
    end subroutine fitpack_surface_c_core_comm_pack

    !> core_comm_expand
    subroutine fitpack_surface_c_core_comm_expand(this, n, buffer) bind(C, name='fitpack_surface_c_core_comm_expand')
        type(fitpack_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_expand(buffer)
        end if
    end subroutine fitpack_surface_c_core_comm_expand

    ! ===========================================================================================
    ! SECTION 8: Component Array Accessors (raw pointer + extents)
    ! ===========================================================================================

    !> Raw view of component 'x': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_surface_c_getcomp_x(this, ptr, extents) &
        bind(C, name='fitpack_surface_c_getcomp_x')
        type(fitpack_surface_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_surface), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%x)) then
                extents = int(shape(fthis%x), kind=c_int64_t)
                if (size(fthis%x) > 0) ptr = c_loc(fthis%x)
            end if
        end if
    end subroutine fitpack_surface_c_getcomp_x

    !> Raw view of component 'y': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_surface_c_getcomp_y(this, ptr, extents) &
        bind(C, name='fitpack_surface_c_getcomp_y')
        type(fitpack_surface_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_surface), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%y)) then
                extents = int(shape(fthis%y), kind=c_int64_t)
                if (size(fthis%y) > 0) ptr = c_loc(fthis%y)
            end if
        end if
    end subroutine fitpack_surface_c_getcomp_y

    !> Raw view of component 'z': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_surface_c_getcomp_z(this, ptr, extents) &
        bind(C, name='fitpack_surface_c_getcomp_z')
        type(fitpack_surface_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_surface), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%z)) then
                extents = int(shape(fthis%z), kind=c_int64_t)
                if (size(fthis%z) > 0) ptr = c_loc(fthis%z)
            end if
        end if
    end subroutine fitpack_surface_c_getcomp_z

    !> Raw view of component 'w': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_surface_c_getcomp_w(this, ptr, extents) &
        bind(C, name='fitpack_surface_c_getcomp_w')
        type(fitpack_surface_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_surface), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%w)) then
                extents = int(shape(fthis%w), kind=c_int64_t)
                if (size(fthis%w) > 0) ptr = c_loc(fthis%w)
            end if
        end if
    end subroutine fitpack_surface_c_getcomp_w

    !> Raw view of component 'wrk2': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_surface_c_getcomp_wrk2(this, ptr, extents) &
        bind(C, name='fitpack_surface_c_getcomp_wrk2')
        type(fitpack_surface_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_surface), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%wrk2)) then
                extents = int(shape(fthis%wrk2), kind=c_int64_t)
                if (size(fthis%wrk2) > 0) ptr = c_loc(fthis%wrk2)
            end if
        end if
    end subroutine fitpack_surface_c_getcomp_wrk2
